# modern-python-projects-course

./: README.md
ch03-code-editor/: app01.py  app02.py
ch06-managing-projects/medium/: LICENSE  Makefile  requirements.txt
ch06-managing-projects/medium/medium/: db.py  medium.py  utils.py
ch06-managing-projects/simple/: Makefile  README.md  requirements.txt  simple.py  tests.py
ch07-testing/: pytest_example.py
ch08-testing/: pyproject.toml  pytest_docstring.py  pytest_example.py  pytest_fixtures.py  pytest_mocking.py  pytest_parametrize.py  pytest_parametrize_calculator.py  test_string_methods.py
ch09-documentation/: calculator.py  math_operations.py
ch09-documentation/docs/source/: api.rst  conf.py  (+1 more)
ch10-ci/: .pre-commit-config.yaml  calculator.py  math_operations.py  test_calculator.py  tests.py  tox.ini
ch11-cli/uptimer/: pyproject.toml
ch11-cli/uptimer/source/: api.rst  conf.py  index.rst
ch11-cli/uptimer/tests/: test_uptimer.py
ch11-cli/uptimer/uptimer/: uptimer.py
ch12-package/uptimer/: AUTHORS.rst  LICENSE  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  tox.ini
ch13-executable/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  setup.cfg  setup.py
ch13-executable/docs/: conf.py  index.rst
ch13-executable/guptimer/: __init__.py  gui.py  helpers.py
ch13-executable/uptimer/: cli.py  helpers.py
ch14/: Dockerfile  main.py
ch14-deployment/: Dockerfile  helpers.py  main.py  requirements.in  requirements.txt
ch14-deployment/templates/: home.html
ch14/templates/: home.html
guides/pyenv_vscode/: README.md
(+56 files in other folders)
